--- a/style.css
+++ b/style.css
@@ -13,8 +13,12 @@
     position: fixed;
     width: 100%;
     padding: 30px 0;
-    /* background: crimson; */
     font-family: 'Ubuntu' , sans-serif;
+    transition: all 0.3s ease;
+}
+.navbar.sticky{
+    padding: 15px 0;
+    background: crimson;   
 }
 
 .max-width{
@@ -37,6 +41,10 @@
 
 .navbar .logo a span{
     color: crimson;
+    transition: color 0.3s ease;
+}
+.navbar.sticky .logo a span{
+    color: #fff;
 }
 
 .navbar .menu li{
@@ -54,6 +62,9 @@
 
 .navbar .menu li a:hover{
     color: crimson;
+}
+.navbar.sticky .menu li a:hover{
+    color: #fff;
 }
 
 /* Home section style */
