--- a/style.css
+++ b/style.css
@@ -67,6 +67,14 @@
     color: #fff;
 }
 
+/* menu btn styling */
+.menu-btn{
+    color: #fff;
+    font-size: 23px;
+    cursor: pointer;
+    display: none;
+}
+
 /* Home section style */
 section{
     background-size: cover;
@@ -83,7 +91,7 @@ section{
 }
 
 .home .max-width{
-    margin: auto 0 auto 40px;
+    margin: auto 0;
 }
 
 .home .home-content .text-1{
@@ -104,4 +112,118 @@ section{
 .home .home-content .text-3 span{
     font-weight: 500;
     color: crimson;
+}
+
+.home .home-content a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+
+.home .home-content a:hover{
+    color: crimson;
+    background: none;
+}
+
+/* About section style */
+.about{
+    font-family: 'Poppins', sans-serif;
+}
+
+/* responsuve media query start */
+@media (max-width: 1104px){
+    .home .max-width{
+        margin-left: 0px;
+    }
+}
+
+@media (max-width: 991px){
+    .max-width{ 
+        padding: 0 50px;
+    }
+}
+
+@media (max-width: 947px){
+    .menu-btn{
+        display: block;
+        z-index: 999;
+    }
+
+    .menu-btn i.active:before{
+        content: "\f00d";
+    }
+
+    .navbar .menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background-color: #111;
+        text-align: center;
+        padding-top: 80px;
+        transition: all 0.3s eases;
+    }
+
+    .navbar .menu.active{
+        left: 0;
+    }
+
+    .navbar .menu li{
+        display: block;
+    }
+
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    
+    .home .home-content .text-2{
+        font-size: 70px;
+    }
+    
+    .home .home-content .text-3{
+        font-size: 35px;
+    }
+
+    .home .home-content a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+}
+
+@media (max-width: 690px){
+    .max-width{ 
+        padding: 0 23px;
+    }
+
+    .home .home-content .text-2{
+        font-size: 65px;
+    }
+    
+    .home .home-content .text-3{
+        font-size: 30px;
+    }
+
+    .home .home-content a{
+        font-size: 20px;
+        padding: 9px 25px;
+    }
+}
+
+@media (max-width: 690px){
+    .home .home-content .text-2{
+        font-size: 50px;
+    }
+    
+    .home .home-content .text-3{
+        font-size: 27px;
+    }
 }
