--- a/style.css
+++ b/style.css
@@ -148,6 +148,19 @@ section{
     padding: 100px 0;
 }
 
+.about, .services, .skills{
+    font-family: 'Poppins', sans-serif;
+}
+
+.about .about-content,
+.services .services-content,
+.skills .skills-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
 section .title{
     position: relative;
     text-align: center;
@@ -170,20 +183,8 @@ section .title::before{
 }
 
 /* About section styling */
-.about, .services{
-    font-family: 'Poppins', sans-serif;
-}
-
 .about .title::after{
     content: "who i  am";
-}
-
-.about .about-content,
-.services .services-content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
 }
 
 .about .about-content .left{
@@ -284,9 +285,95 @@ section .title::before{
     margin: 10px 0 7px 0;
 }
 
+/* Skills section styling */
 
+.skills .title::after{
+    content: "what i know";
+}
 
+.skills .skills-content .column{
+    width: calc(50% - 30px);
+}
 
+.skills .skills-content .left .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.skills .skills-content .left p{
+    text-align: justify;
+}
+
+.skills .skills-content .left a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 6px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+
+.skills .skills-content .left a:hover{
+    color: crimson;
+    background: none;
+}
+
+.skills .skills-content .right .bars{
+    margin-bottom: 15px;
+}
+
+.skills .skills-content .right .info{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skills .skills-content .right span{
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.skills .skills-content .right .line{
+    height: 5px;
+    width: 100%;
+    background: lightgray;
+    position: relative;
+}
+
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: crimson;
+}
+
+.skills .skills-content .right .html::before{
+    width: 90%;
+}
+
+.skills .skills-content .right .css::before{
+    width: 80%;
+}
+
+.skills .skills-content .right .js::before{
+    width: 50%;
+}
+
+.skills .skills-content .right .php::before{
+    width: 60%;
+}
+
+.skills .skills-content .right .mysql::before{
+    width: 70%;
+}
 
 /* responsuve media query start */
 @media (max-width: 1300px){
@@ -378,6 +465,11 @@ section .title::before{
     .services .services-content  .cards{
         width: calc(50% - 10px);
         margin-bottom: 20px;
+    }
+
+    .skills .skills-content .column{
+        flex: 100%;
+        margin-bottom: 35px;
     }
 }
 
