--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ section{
     padding: 100px 0;
 }
 
-.about, .services, .skills{
+.about, .services, .skills, .teams{
     font-family: 'Poppins', sans-serif;
 }
 
@@ -235,16 +235,18 @@ section .title::before{
 }
 
 /* Services section styling */
-.services{
+.services, .teams{
     color: #fff;
     background: #111;
 }
 
-.services .title::before{
+.services .title::before,
+.teams .title::before{
     background: #fff;
 }
 
-.services .title::after{
+.services .title::after,
+.teams .title::after{
     background: #111;
     content: "what i provide";
 }
@@ -373,6 +375,79 @@ section .title::before{
 
 .skills .skills-content .right .mysql::before{
     width: 70%;
+}
+
+/* teams section styling */
+
+.teams .title::after{
+    content: "who with me";
+}
+
+.teams .carousel .card{
+    background: #222;
+    border-radius: 6px;
+    padding: 25px 35px;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+
+.teams .carousel .card:hover{
+    background: crimson;
+}
+
+.teams .carousel .card .box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+.teams .carousel .card:hover .box{
+    transform: scale(1.05);
+}
+
+.teams .carousel .card img{
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 5px solid crimson;
+}
+
+.teams .carousel .card:hover img{
+    border-color: #fff;
+}
+
+.teams .carousel .card .text{
+    font-size: 25px;
+    font-weight: 500;
+    margin: 10px 0 7px 0;
+}
+
+.owl-dots{
+    text-align: center;
+    margin-top: 20px;
+}
+
+.owl-dot{
+    height: 13px;
+    width: 13px;
+    margin: 0 5px;
+    outline: none!important;
+    border-radius: 50%;
+    border: 2px solid crimson!important;
+    transition: all 0.3s ease;
+}
+
+.owl-dot.active{
+    width: 35px;
+    border-radius: 14px;
+}
+
+.owl-dot.active,
+.owl-dot:hover{
+    background: crimson!important;
 }
 
 /* responsuve media query start */
