--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     text-decoration: none;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 /* navbar styling */
 .navbar{
     position: fixed;
@@ -54,6 +58,7 @@
 }
 
 .navbar .menu li a{
+    display: block;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
@@ -74,6 +79,31 @@
     font-size: 23px;
     cursor: pointer;
     display: none;
+}
+
+.scroll-up-btn{
+    position: fixed;
+    height: 45px;
+    width: 45px;
+    background: crimson;
+    right: 30px;
+    bottom: 10px;
+    text-align: center;
+    line-height: 45px;
+    color: #fff;
+    z-index: 9999;
+    font-size: 30px;
+    border-radius: 23px;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+}
+
+.scroll-up-btn.show{
+    bottom: 30px;
+    opacity: 1;
+    pointer-events: auto;
 }
 
 /* Home section style */
@@ -148,7 +178,7 @@ section{
     padding: 100px 0;
 }
 
-.about, .services, .skills, .teams, .contact{
+.about, .services, .skills, .teams, .contact, footer{
     font-family: 'Poppins', sans-serif;
 }
 
@@ -556,10 +586,26 @@ section .title::before{
     transition: all 0.3s ease;
 }
 
-
 .contact .right form .button button:hover{
     color: crimson;
     background: none;
+}
+
+/* Footer section styling */
+
+footer{
+    background: #111;
+    padding: 20px 23px;
+    color: #fff;
+}
+
+footer span a{
+    color: crimson;
+    text-decoration: none;
+}
+
+footer span a:hover{
+    text-decoration: underline;
 }
 
 
